ZEPPELIN-3127: Upgrade selenium version
Change-Id: I6f218dc007603ed1203e74b337f3e74f708c3862

--- a/pom.xml
+++ b/pom.xml
@@ -766,6 +766,13 @@
     </profile>
 
     <profile>
+      <id>integration</id>
+      <modules>
+        <module>zeppelin-integration</module>
+      </modules>
+    </profile>
+
+    <profile>
       <id>r</id>
       <modules>
         <module>r</module>
