[ZEPPELIN-3127] Upgrade selenium version
### What is this PR for?
We are currently using a very old selenium version (i.e. 2.48.2) this is to upgrade it to 3.8.1

### What type of PR is it?
[Improvement]

### What is the Jira issue?
* [ZEPPELIN-3127](https://issues.apache.org/jira/browse/ZEPPELIN-3127)

### How should this be tested?
* CI should be green

### Questions:
* Does the licenses files need update? yes
* Is there breaking changes for older versions?
* Does this needs documentation?

Author: prabhjyotsingh <prabhjyotsingh@gmail.com>
Author: Prabhjyot Singh <prabhjyotsingh@gmail.com>

Closes #2717 from prabhjyotsingh/ZEPPELIN-3127 and squashes the following commits:

e78896356 [prabhjyotsingh] rollback to FF31
6c5be28a8 [Prabhjyot Singh] remove `endToEndTestEnabled (System.getenv("TEST_SELENIUM"))` as with this PR selenium is in different profile.
01632943e [prabhjyotsingh] removing LogEntries as this is no longer required for Selenium-3.x
aab48b857 [prabhjyotsingh] run only selenium for this matrix (4)
873ee324a [prabhjyotsingh] remove scala and set firefoxOptions.setHeadless(true);
e7d3c8dce [Prabhjyot Singh] try FF56
a7ec96f2e [prabhjyotsingh] Fix scala not running
cbb365aef [prabhjyotsingh] start/stop plugin
2689dff8c [prabhjyotsingh] fix dependencies issue
88c07bab1 [prabhjyotsingh] ZEPPELIN-3127: Upgrade selenium version
1ca024f84 [prabhjyotsingh] ZEPPELIN-3127: Upgrade selenium version (reverted from commit 65c11b8178a4ebe58ae84e4e074bbddb522900f7)
260056f18 [prabhjyotsingh] review comment (reverted from commit 52a16816e73a282439060aaf2cf0e80b1b3a8093)
b28774430 [prabhjyotsingh] fix build (reverted from commit 840a5d78a33a1643a7424c8e94521510a5db1184)
840a5d78a [Prabhjyot Singh] fix build
52a16816e [Prabhjyot Singh] review comment
65c11b817 [prabhjyotsingh] ZEPPELIN-3127: Upgrade selenium version

--- a/.travis.yml
+++ b/.travis.yml
@@ -69,9 +69,11 @@ matrix:
       env: PYTHON="3" SCALA_VER="2.11" SPARK_VER="2.2.0" HADOOP_VER="2.6" PROFILE="-Pspark-2.2 -Pweb-ci -Pscalding -Phelium-dev -Pexamples -Pscala-2.11" BUILD_FLAG="package -Pbuild-distr -DskipRat" TEST_FLAG="verify -Pusing-packaged-distr -DskipRat" MODULES="-pl ${INTERPRETERS}" TEST_PROJECTS="-Dtests.to.exclude=**/ZeppelinSparkClusterTest.java,**/org.apache.zeppelin.spark.*,**/HeliumApplicationFactoryTest.java -DfailIfNoTests=false"
 
     # Test selenium with spark module for 1.6.3
-    - jdk: "oraclejdk7"
-      dist: precise
-      env: PYTHON="2" TEST_SELENIUM="true" SCALA_VER="2.10" SPARK_VER="1.6.3" HADOOP_VER="2.6" PROFILE="-Pweb-ci -Pspark-1.6 -Phadoop-2.6 -Phelium-dev -Pexamples" BUILD_FLAG="package -DskipTests -DskipRat" TEST_FLAG="verify -DskipRat" TEST_PROJECTS="-pl .,zeppelin-interpreter,zeppelin-zengine,zeppelin-server,zeppelin-display,spark-dependencies,spark,python -Dtest=org.apache.zeppelin.AbstractFunctionalSuite -DfailIfNoTests=false"
+    - jdk: "oraclejdk8"
+      dist: trusty
+      addons:
+        firefox: "31.0"
+      env: PYTHON="2" SCALA_VER="2.10" SPARK_VER="1.6.3" HADOOP_VER="2.6" PROFILE="-Pweb-ci -Pspark-1.6 -Phadoop-2.6 -Phelium-dev -Pexamples -Pintegration" BUILD_FLAG="package -DskipTests -DskipRat" TEST_FLAG="verify -DskipRat" TEST_PROJECTS="-pl .,zeppelin-integration -DfailIfNoTests=false"
 
     # Test interpreter modules
     - jdk: "oraclejdk7"
