[ZEPPELIN-3169] Fix maven version set

--- a/shell/pom.xml
+++ b/shell/pom.xml
@@ -45,6 +45,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>zeppelin-interpreter</artifactId>
+      <version>${project.version}</version>
     </dependency>
 
     <dependency>
