--- a/interpreter-parent/pom.xml
+++ b/interpreter-parent/pom.xml
@@ -37,7 +37,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>zeppelin-interpreter</artifactId>
-        <version>0.8.0-SNAPSHOT</version>
+        <version>${project.version}</version>
         <scope>provided</scope>
       </dependency>
 
