--- a/zeppelin-jupyter/pom.xml
+++ b/zeppelin-jupyter/pom.xml
@@ -35,7 +35,7 @@
   <description>Jupyter support for Apache Zeppelin</description>
 
   <properties>
-    <zeppelin.version>0.8.0-SNAPSHOT</zeppelin.version>
+    <zeppelin.version>${project.version}</zeppelin.version>
   </properties>
 
   <dependencies>
