--- a/conf/zeppelin-site.xml.template
+++ b/conf/zeppelin-site.xml.template
@@ -427,13 +427,13 @@
 <property>
   <name>zeppelin.interpreter.lifecyclemanager.timeout.checkinterval</name>
   <value>60000</value>
-  <description>milliseconds of the interval to checking whether interpreter is time out</description>
+  <description>Milliseconds of the interval to checking whether interpreter is time out</description>
 </property>
 
 <property>
   <name>zeppelin.interpreter.lifecyclemanager.timeout.threshold</name>
   <value>3600000</value>
-  <description>milliseconds of the interpreter timeout threshold, by default it is 1 hour</description>
+  <description>Milliseconds of the interpreter timeout threshold, by default it is 1 hour</description>
 </property>
 
 <!--
@@ -468,39 +468,18 @@
 </property>
 -->
 <!--
+
 <property>
   <name>zeppelin.server.xxss.protection</name>
   <value>1</value>
   <description>The HTTP X-XSS-Protection response header is a feature of Internet Explorer, Chrome and Safari that stops pages from loading when they detect reflected cross-site scripting (XSS) attacks. When value is set to 1 and a cross-site scripting attack is detected, the browser will sanitize the page (remove the unsafe parts).</description>
 </property>
 -->
+
 <!--
 <property>
   <name>zeppelin.interpreter.callback.portRange</name>
   <value>10000:10010</value>
-</property>
--->
-
-<!--
-<property>
-  <name>zeppelin.interpreter.lifecyclemanager.class</name>
-  <value>org.apache.zeppelin.interpreter.lifecycle.TimeoutLifecycleManager</value>
-</property>
--->
-
-<!--
-<property>
-  <name>zeppelin.interpreter.lifecyclemanager.timeout.checkinterval</name>
-  <value>6000</value>
-  <description>Check interval of interpreter expiration in seconds</description>
-</property>
--->
-
-<!--
-<property>
-  <name>zeppelin.interpreter.lifecyclemanager.timeout.threshold</name>
-  <value>3600000</value>
-  <description>Threshold of interpreter idle time in seconds, interpeter exceed this threshold will be killed</description>  
 </property>
 -->
 
