--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
     <module>zeppelin-server</module>
     <module>zeppelin-jupyter</module>
     <module>zeppelin-distribution</module>
+    <module>sap</module>
   </modules>
 
   <properties>
