ZEPPELIN-3206. Move spark integration test to zeppelin-integration

--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -114,6 +114,14 @@
             </plugin>
 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>${plugin.clean.version}</version>
+                <configuration combine.self="override">
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>org.scalatest</groupId>
                 <artifactId>scalatest-maven-plugin</artifactId>
                 <configuration>
