--- a/spark/spark-scala-parent/pom.xml
+++ b/spark/spark-scala-parent/pom.xml
@@ -32,6 +32,7 @@
     <artifactId>spark-scala-parent</artifactId>
     <version>0.8.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <name>Zeppelin: Spark Scala Parent</name>
 
     <dependencies>
 
