--- a/zeppelin-server/pom.xml
+++ b/zeppelin-server/pom.xml
@@ -341,6 +341,11 @@
           </exclusion>
         </exclusions>
       </dependency>
+      <dependency>
+        <groupId>org.bitbucket.cowwoc</groupId>
+        <artifactId>diff-match-patch</artifactId>
+        <version>1.1</version>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
