eslint rule for space
Change-Id: Ibff527fdf3ab3bf91a109c56629db47e54afdcfb

--- a/zeppelin-web/.eslintrc
+++ b/zeppelin-web/.eslintrc
@@ -48,6 +48,7 @@
     "no-console": ["off"],
     "valid-jsdoc": "off",
     "semi": [2, "always"],
-    "no-invalid-this": 1
+    "no-invalid-this": 1,
+    "indent": ["error", 2, { "SwitchCase": 1 }]
   }
 }
