--- a/conf/zeppelin-site.xml.template
+++ b/conf/zeppelin-site.xml.template
@@ -540,5 +540,11 @@
   <value>origin</value>
   <description>Git repository remote</description>
 </property>
+
+<property>
+  <name>zeppelin.notebook.cron.enable</name>
+  <value>true</value>
+  <description>Notebook enable cron scheduler feature</description>
+</property>
 -->
 </configuration>
