option for 'zeppelin.notebook.cron.folders'
Change-Id: Ic739c6f9663e91aba1cc3acca225fe71a353ddc2

--- a/conf/zeppelin-site.xml.template
+++ b/conf/zeppelin-site.xml.template
@@ -546,5 +546,10 @@
   <value>true</value>
   <description>Notebook enable cron scheduler feature</description>
 </property>
+<property>
+  <name>zeppelin.notebook.cron.folders</name>
+  <value></value>
+  <description>Notebook cron folders</description>
+</property>
 -->
 </configuration>
