--- a/conf/zeppelin-site.xml.template
+++ b/conf/zeppelin-site.xml.template
@@ -543,7 +543,7 @@
 
 <property>
   <name>zeppelin.notebook.cron.enable</name>
-  <value>true</value>
+  <value>false</value>
   <description>Notebook enable cron scheduler feature</description>
 </property>
 <property>
