ZEPPELIN-3314. Only apply maven-dependency-plugin for interpreter component
only interpreter component need to copy interpreter dependency and interpreter-setting.json

[Bug Fix | Improvement ]

* [ ] - Task

* https://issues.apache.org/jira/browse/ZEPPELIN-3314

* CI pass

* Does the licenses files need update? No
* Is there breaking changes for older versions? No
* Does this needs documentation? No

Author: Jeff Zhang <zjffdu@apache.org>

Closes #2857 from zjffdu/ZEPPELIN-3314 and squashes the following commits:

322530f [Jeff Zhang] ZEPPELIN-3314. Only apply maven-dependency-plugin for interpreter component

(cherry picked from commit 1effc63507f819f2b99589a34605afb53226282d)
Signed-off-by: Jeff Zhang <zjffdu@apache.org>

--- a/zeppelin-interpreter/pom.xml
+++ b/zeppelin-interpreter/pom.xml
@@ -239,19 +239,20 @@
   </dependencies>
 
   <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <artifactId>maven-enforcer-plugin</artifactId>
-          <executions>
-            <execution>
-              <id>enforce</id>
-              <phase>none</phase>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <configuration>
+          <skip>false</skip>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+      </plugin>
+    </plugins>
   </build>
 
 </project>
