fix wrong properties for spark2.3

--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -198,7 +198,7 @@
             <properties>
                 <spark.version>2.3.0</spark.version>
                 <protobuf.version>2.5.0</protobuf.version>
-                <spark.py4j.version>0.10.6</spark.py4j.version>
+                <py4j.version>0.10.6</py4j.version>
             </properties>
         </profile>
 
