ZEPPELIN-3359. Move config storage & recovery storage to plugins

--- a/zeppelin-plugins/pom.xml
+++ b/zeppelin-plugins/pom.xml
@@ -46,6 +46,10 @@
         <module>notebookrepo/mongodb</module>
         <module>notebookrepo/zeppelin-hub</module>
         <module>notebookrepo/filesystem</module>
+
+        <module>configstorage/filesystem</module>
+
+        <module>recoverystorage/filesystem</module>
     </modules>
 
     <dependencies>
