[ZEPPELIN-3416] Bump up the version of xercesImpl to 2.11.0.SP5
Update xercesImpl to 2.11.0.SP5 to get some fixes. This is a required dependency for jdbc-phoenix.

[ Improvement ]

* [ZEPPELIN-3416](https://issues.apache.org/jira/browse/ZEPPELIN-3416)

* Does the licenses files need update? N/A
* Is there breaking changes for older versions? N/A
* Does this needs documentation? N/A

Author: Prabhjyot Singh <prabhjyotsingh@gmail.com>

Closes #2933 from prabhjyotsingh/ZEPPELIN-3416 and squashes the following commits:

54677f135 [Prabhjyot Singh] bump version of beanutils to 1.9.2
8c891b6ae [Prabhjyot Singh] ZEPPELIN-3416: Update xercesImpl to 2.11.0.SP5

Change-Id: I592b7e8dbf56144d65d5ba726d92f230d51b49ac
(cherry picked from commit 322c8686505993c807a04e3994e0eb5a36d7ef17)
Signed-off-by: Prabhjyot Singh <prabhjyotsingh@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -752,6 +752,10 @@
           <id>cloudera</id>
           <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
         </repository>
+        <repository>
+          <id>hortonworks</id>
+          <url>http://repo.hortonworks.com/content/groups/public/</url>
+        </repository>
       </repositories>
     </profile>
 
